--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
-        "@types/node": "25.2.0"
+        "@types/node": "25.2.0",
+        "@types/react": "^19.2.13",
+        "typescript": "^5.9.3"
     }
 }
